--- a/css/styles.less
+++ b/css/styles.less
@@ -1,3 +1,5 @@
+// out: styles.css
+
 @text-color: #333;
 @link-hover-color: #545c6c;
 @bg-color: #FFF;
@@ -129,6 +131,7 @@ a.navbar-brand {
             max-width: 300px;
         }
     }
+
 }
 
 #references {
@@ -137,10 +140,15 @@ a.navbar-brand {
         padding: 0 10%;
         .col-lg-4,
         col-lg-6 {
-            height: 120px;
+            position: relative;
+            height: 150px;
             text-align: center;
             img {
-                margin: 0 auto;
+              position: absolute;
+              margin: 0 auto;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%,-50%);
             }
         }
     }
